Issue #376: Added webkit-font-rendering to improve text legibility.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ html {
 }
 body {
 	background: #fff;
+    -webkit-font-smoothing: antialiased; /* Improve text rendering on Mac http://maxvoltar.com/archive/-webkit-font-smoothing/ */
 }
 article,
 aside,
